# rabx

./: .gitignore  Cargo.toml  README.md  cli.yaml  install
src/: command.rs  lib.rs
