[package]
name = "kvs"
version = "0.1.1"
authors = [ "Kartik Sharma <kartik.sharma522@gmail.com>" ]
description = "A simple in-memory key-value store"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.5", features = ["yaml"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bson = "2.0.1"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
